<resources>
    <string name="app_name">SD Demo</string>
    <string name="start_service_one">Start1</string>
    <string name="start_service_two">Start2</string>
    <string name="end_service_one">End1</string>
    <string name="end_service_two">End2</string>

    <string name="end_sdp_one">eSDP1</string>
    <string name="end_sdp_two">eSDP2</string>
    <string name="start_sdp_one">sSDP1</string>
    <string name="start_sdp_two">sSDP2</string>

    <string name="ger_te_in_reichweite">Gefundene Geräte</string>
    <string name="offene_verbindunen">Offene Verbindunen</string>

    <string name="refresh">Refresh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_bt">Bluetooth Connect</string>
    <string name="title_wifip2p">Wifi Direct Connect</string>
    <string name="wifi_discover">Wifi Direct Discovery</string>
    <string name="bt_discover">Bluetooth Discover</string>
    <string name="end_disc">End Disc</string>
    <string name="discover">Discover</string>

    <string name="discoverabe">Discoverabe</string>
    <string name="discovery">Discovery</string>
    <string name="refresh_btn_label">r</string>
    <string name="end_discovery">E Discovery</string>


    <string name="discover_all">discover all</string>
    <string name="refresh_services">refresh services</string>
    <string name="ConnectionType_Server">as Server</string>
    <string name="ConnectionType_Client">as Client</string>
    <string name="service_instance">Service Instance</string>
    <string name="name">Name</string>
    <string name="connected_peer">Connected Peer :</string>
    <string name="address">address</string>
    <string name="uuid">UUID</string>
    <string name="info">info</string>
</resources>