<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.ui.bluetoothSdpDemo.BluetoothFragment">

    <Button
        android:id="@+id/end_sdp_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/end_sdp_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_sdp_one_button" />

    <Button
        android:id="@+id/start_sdp_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/start_sdp_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_sdp_two_button"
        app:layout_constraintTop_toBottomOf="@+id/start_sdp_one_button" />

    <Button
        android:id="@+id/end_service_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_service_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_service_one_button" />

    <Button
        android:id="@+id/discoverable_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/discoverabe"
        app:layout_constraintBottom_toTopOf="@+id/start_service_one_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_discovery_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/discovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_text_view" />

    <TextView
        android:id="@+id/hdln_connections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ger_te_in_reichweite"
        app:layout_constraintBottom_toTopOf="@+id/devices_in_range"
        app:layout_constraintEnd_toStartOf="@+id/connection_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hdln_devices_in_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offene_verbindunen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/connection_list_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/devices_in_range"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/msg_text_view"
        app:layout_constraintEnd_toStartOf="@+id/connection_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hdln_connections" />

    <ListView
        android:id="@+id/connection_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/msg_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/devices_in_range"
        app:layout_constraintTop_toBottomOf="@+id/hdln_devices_in_range" />


    <Button
        android:id="@+id/start_service_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/start_service_one"
        app:layout_constraintBottom_toTopOf="@+id/start_service_two_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/start_service_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_service_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/end_service_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/end_service_one"
        app:layout_constraintStart_toEndOf="@+id/start_service_one_button"
        app:layout_constraintTop_toTopOf="@+id/start_service_one_button" />

    <Button
        android:id="@+id/start_sdp_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/start_sdp_one"
        app:layout_constraintBottom_toTopOf="@+id/start_sdp_two_button"
        app:layout_constraintEnd_toStartOf="@+id/end_sdp_one_button"
        app:layout_constraintTop_toBottomOf="@+id/start_discovery_button" />

    <Button
        android:id="@+id/end_sdp_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/end_sdp_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_discovery_button" />

    <TextView
        android:id="@+id/msg_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/discoverable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>