<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.wifiDirecServiceDiscoveryDemo.WifiDirectFragment">

    <Button
        android:id="@+id/start_wifi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/discovery"
        app:layout_constraintBottom_toTopOf="@+id/start_discovery_one_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_service_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start_service_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/end_service_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_service_one"
        app:layout_constraintBottom_toTopOf="@+id/start_service_one_btn"
        app:layout_constraintEnd_toEndOf="@+id/start_service_one_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/start_service_one_btn"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/start_discovery_one_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_sdp_one"
        app:layout_constraintBottom_toTopOf="@+id/end_discovery_one_btn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/end_discovery_one_btn"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/end_sdp_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
