<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.demoFragments.BluetoothDiscoveryFragment">

    <Button
        android:id="@+id/end_sdp_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/end_sdp_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_sdp_one_button" />

    <Button
        android:id="@+id/start_sdp_two_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="7dp"
        android:text="@string/start_sdp_two"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_sdp_one_button" />

    <Button
        android:id="@+id/start_discovery_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/discovery"
        app:layout_constraintBottom_toTopOf="@+id/end_sdp_one_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/refresh_button" />

    <TextView
        android:id="@+id/hdln_devices_in_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="gefundene services"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/connection_list_view"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/refresh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hdln_devices_in_range" />


    <Button
        android:id="@+id/start_sdp_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/start_sdp_one"
        app:layout_constraintBottom_toTopOf="@+id/start_sdp_two_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_discovery_button" />

    <Button
        android:id="@+id/end_sdp_one_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/end_sdp_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_discovery_button" />

    <Button
        android:id="@+id/refresh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/refresh_services"
        android:onClick="onButtonClick"
        app:layout_constraintBottom_toTopOf="@+id/start_sdp_one_button"
        app:layout_constraintEnd_toStartOf="@+id/start_discovery_button"
        app:layout_constraintStart_toStartOf="@+id/start_sdp_one_button"
        app:layout_constraintTop_toTopOf="@+id/start_discovery_button" />

    <Button
        android:id="@+id/discover_all_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/discover_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/end_sdp_two_button"
        app:layout_constraintStart_toEndOf="@+id/start_sdp_two_button" />

</androidx.constraintlayout.widget.ConstraintLayout>